# task-assignment-robotic-warehouse

./: .env  .gitignore  TODO  pyproject.toml
data/: spreadsheet_summary.txt
data/maps/: FORMAT.md  full_dhl.csv  image_recreation.csv  large_dhl.csv  map_format.json  medium_dhl.csv  midpickerwall_test.csv  replenishment.csv  small_dhl.csv  smaller_dhl.csv  tiny_dhl.csv  tiny_dhl.json
data/maps/old_need_json/: extralarge.csv  image_recreation.csv  large.csv  medium.csv  small.csv
data/processed/: generated_orders.csv  order_data_sample.csv
data/raw/: Order Details UofT Capstone V2 (ABC).csv  Order Details UofT Capstone V2 (Data in Scope).csv  Order Details UofT Capstone V2 (Instructions).csv  Order Details UofT Capstone V2 (Location Master).csv  Order Details UofT Capstone V2 (Sizing).csv
docs/: BRANCH_CHANGE_SUMMARY.md  GUI_ELEMENTS.md  MANUAL_RENDER_CHECKLIST.md  RENDER_VERIFICATION_COMMANDS.md  WALL_CLOCK_TIMING_MIGRATION_PLAN.md  order_processing_flow.md  order_processing_flow_condensed.md
profiles/: classical_eval.prof
scripts/: generate_diagnostics.py  generate_image_recreation_map.py  generate_orders.py  profile_classical_eval.py  render_simulation.py  sample_order_data.py  validate_zhao_calibration.py  verify_pipeline_trials.ps1
tarware/: __init__.py  definitions.py  heuristic.py  human_factors.py  main.py  order_sequencer.py  rendering.py  rendering_overlays.py  warehouse.py
tarware/spaces/: MultiAgentBaseObservationSpace.py  MultiAgentGlobalObservationSpace.py  MultiAgentPartialObservationSpace.py
tests/: test_human_factors.py  test_warehouse_hf_integration.py
