[build-system]
#requires = ["setuptools"]
#build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name="tarware"
version="1.1.0"
requires-python=">=3.9"
description="Task-Assignment Multi-Robot Warehouse environment for reinforcement learning"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "Raul Steleac", email = "raulsteleac@ed.ac.uk"},
]
license = {file = "LICENSE"}
classifiers=[
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "Programming Language :: Python :: 3.9",
    ]
dependencies = [
    "numpy",
    "pandas",
    "gymnasium",
    "six==1.16.0",
    "pyglet==1.5.11",
    "networkx==3.2.1",
    "pyastar2d",
    "python-dotenv",
    "stable-baselines3 (>=2.7.1,<3.0.0)"
]

[tool.setuptools.packages.find]
include = ["tarware*"]
exclude = ["data*", "docs*", "external*", "scripts*"]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Repository  = "https://github.com/raulsteleac/task-assignment-robotic-warehouse.git"
